# OuadBTech

./: README.md  package-lock.json
src/hello_backend/: Cargo.toml  hello_backend.did
src/hello_backend/src/: lib.rs
src/hello_frontend/: package.json  tsconfig.json  vite.config.js
src/hello_frontend/src/: App.jsx  index.scss
